manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-slack
  labels:
    app: no-slack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-slack
  template:
    metadata:
      labels:
        app: no-slack
    spec:
      serviceAccountName: no-slack
      containers:
      - name: no-slack
        image: asia-northeast1-docker.pkg.dev/helpfeelinc-playgrounds-deploy/default/no-slack:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/rails/.env"
          name: dotenv
          subPath: .env
      volumes:
      - name: dotenv
        csi:
          driver: secrets-store-gke.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: no-slack-env
---
apiVersion: v1
kind: Service
metadata:
  name: no-slack
spec:
  clusterIP: None
  selector:
    app: no-slack
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: no-slack
spec:
  parentRefs:
  - name: external-https # name of the gateway
  hostnames:
  - "no-slack.helpfeel.co.jp"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: no-slack
      port: 80
